manifest/ingress/kafka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: kafka
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-traefik"

    # Force Traefik to redirect HTTP entrypoints to HTTPS (websecure)
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - protomakerlab.tail37e3dd.ts.net
      secretName: kafka-ui-tls-secret
  rules:
    - host: protomakerlab.tail37e3dd.ts.net
      http:
        paths:
          - backend:
              service:
                name: kafka-ui
                port:
                  number: 80
            path: /kafka-ui
            pathType: Prefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-bootstrap-route
  namespace: kafka
spec:
  entryPoints:
    - kafka
  routes:
    - match: HostSNI(`kafka-bootstrap.protomakerlab.tail37e3dd.ts.net`)
      services:
        - name: kafka-cluster-kafka-external-bootstrap
          port: 9094

    - match: HostSNI(`kafka-broker-0.protomakerlab.tail37e3dd.ts.net`)
      services:
        - name: kafka-cluster-broker-0
          port: 9094
          
    - match: HostSNI(`kafka-broker-1.protomakerlab.tail37e3dd.ts.net`)
      services:
        - name: kafka-cluster-broker-1
          port: 9094

    - match: HostSNI(`kafka-broker-2.protomakerlab.tail37e3dd.ts.net`)
      services:
        - name: kafka-cluster-broker-2
          port: 9094
  tls:
    passthrough: true
