manifest/ingress/keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-traefik"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - protomakerlab.tail37e3dd.ts.net
      secretName: keycloak-tls-secret
  rules:
    - host: protomakerlab.tail37e3dd.ts.net
      http:
        paths:
          - backend:
              service:
                name: keycloakx-http
                port:
                  number: 80
            path: /auth
            pathType: Prefix
