manifest/ingress/mongo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongodb-ingress-tcp
  namespace: mongodb
spec:
  entryPoints:
    - mongodb # Matches the entrypoint name defined in Traefik
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mongodb-community-svc
          port: 27017
    # - match: HostSNI(`mongodb-community-0.protomakerlab.tail37e3dd.ts.net`)
    #   services:
    #     - name: mongo-node-0
    #       port: 27017
    # - match: HostSNI(`mongodb-community-1.protomakerlab.tail37e3dd.ts.net`)
    #   services:
    #     - name: mongo-node-1
    #       port: 27017
    # - match: HostSNI(`mongodb-community-2.protomakerlab.tail37e3dd.ts.net`)
    #   services:
    #     - name: mongo-node-2
    #       port: 27017
