manifest/ingress/openfga.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfga-ingress
  namespace: openfga
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: openfga-strip-openfga-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: protomakerlab.tail37e3dd.ts.net
      http:
        paths:
          - backend:
              service:
                name: openfga
                port:
                  number: 8080
            path: /openfga
            pathType: Prefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-openfga-prefix
  namespace: openfga # Make sure this is the same namespace as your Ingress/Service
spec:
  stripPrefix:
    prefixes:
      - /openfga
